make component button

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,5 +7,6 @@ $secondary: #f83600;
 
 // Import Utilities
 @import "./components/mixins";
+@import "./components/buttons";
 @import "./fonts";
 @import "./navbar";
