complete first part of services

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,6 +8,7 @@ $secondary: #f83600;
 // Import Utilities
 @import "./components/mixins";
 @import "./components/buttons";
+@import "./components/heading-line";
 @import "./fonts";
 @import "./navbar";
 @import "./intro";
